moving position of about text to fix border bleed

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -14,8 +14,8 @@
 
 .home-content-container {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: -1px;
+  left: -1px;
 
   width: 45%;
   height: 50%;
@@ -25,6 +25,7 @@
   align-items: center;
 
   background-color: var(--home-bg-color);
+
 }
 
 .home-text {
